--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node ./dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "npx tslint --project tsconfig.json --config tslint.json"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@types/jest": "^25.1.4",
     "jest": "^25.2.0",
     "ts-jest": "^25.2.1",
+    "tslint": "^6.1.0",
     "typescript": "^3.8.3"
   }
 }
