--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "start": "node ./dist/index.js",
     "test": "jest",
-    "lint": "npx tslint --project tsconfig.json --config tslint.json"
+    "lint": "npx tslint --project tsconfig.json --config tslint.json",
+    "prettier": "npx prettier --write 'src/**/*.ts'"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +16,10 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "jest": "^25.2.0",
+    "prettier": "2.0.2",
     "ts-jest": "^25.2.1",
     "tslint": "^6.1.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3"
   }
 }
