--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^25.1.4",
+    "husky": "^4.2.3",
     "jest": "^25.2.0",
     "prettier": "2.0.2",
+    "pretty-quick": "^2.0.1",
     "ts-jest": "^25.2.1",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
