--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "npx tsc",
     "start": "node ./dist/index.js",
     "test": "jest",
-    "lint": "npx tslint --project tsconfig.json --config tslint.json",
-    "prettier": "npx prettier --write 'src/**/*.ts'"
+    "tslint": "npx tslint --project tsconfig.json --config tslint.json",
+    "prettier": "npx pretty-quick --staged"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +26,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "npm run tslint && npm run prettier && npm test"
     }
   }
 }
